Practiced single and paired HTML tags

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Лабораторная работа №5</h1>
     <p>Это моя первая HTML-страница, созданная в рамках изучения основ веб-разметки.</p>
+    <img src="" alt="">
+    <h1>https://google.com</h1>
 </body>
 </html>
