Added basic HTML tags section

--- a/index.html
+++ b/index.html
@@ -10,5 +10,24 @@
     <p>Это моя первая HTML-страница, созданная в рамках изучения основ веб-разметки.</p>
     <img src="" alt="">
     <h1>https://google.com</h1>
+    <br>
+    <h2>Это подзаголовок</h2>
+    <h3>Подраздел</h3>
+    <br>
+    <p>Это обычный абзац текста.</p>
+    <br>
+    <p>Это <strong>очень важная</strong> фраза.</p>
+    <br>
+    <p>Это <em>курсивный</em> текст.</p>
+    <p>Линия 1<br>Линия 2</p>
+    <hr>
+    <p><a href="https://google.com">Перейти на Google</a></p>
+    <br>
+    <p><img src="ex.png" alt="Картинка не загрузилась" /></p>
+    <h2>Базовые HTML-теги</h2>
+    <p>HTML позволяет <strong>выделять</strong> текст и делать <em>акценты</em>.</p>
+    <hr />
+    <p><a href="https://github.com">Мой GitHub</a></p>
+    <p><img src="img/gitPushLab5_AbdulinRR_Fedorov.png" alt="Пример изображение" /></p>
 </body>
 </html>
