--- a/index.html
+++ b/index.html
@@ -29,5 +29,23 @@
     <hr />
     <p><a href="https://github.com">Мой GitHub</a></p>
     <p><img src="img/gitPushLab5_AbdulinRR_Fedorov.png" alt="Пример изображение" /></p>
+    <h2>Мои списки</h2>
+    <ol>
+        <li>Аватар</li>
+        <li>Титаник</li>
+        <li>Кинг Конг</li>
+    </ol>
+    <ul>
+        <li>игра в шахматы</li>
+        <li>дартс</li>
+    </ul>
+    <ul>
+        <li>Пункт 1
+            <ol>
+                <li>привет</li>
+                <li>пока</li>
+            </ol>
+        </li>
+    </ul>
 </body>
 </html>
