Added image gallery and gallery screenshot

--- a/index.html
+++ b/index.html
@@ -73,5 +73,10 @@
     <button title="Nazmi na meni">Кнопка</button>
     <p><input type="text" placeholder="Volzhsky"</p>
 
+    <h2>Галерея</h2>
+    <p><a href="https://google.com">Google</a></p>
+    <p><img src="img/basicTagsLab5_Abdulin_Fedorov.png"></p>
+    <p><a href="https://google.com">Google</a></p>
+    <img src="#" width="200" height="150">
 </body>
 </html>
