--- a/index.html
+++ b/index.html
@@ -78,5 +78,21 @@
     <p><img src="img/basicTagsLab5_Abdulin_Fedorov.png"></p>
     <p><a href="https://google.com">Google</a></p>
     <img src="#" width="200" height="150">
+
+    <table border="4">
+        <tr>
+            <th>ФИО</th>
+            <th>Группа</th>
+            <th>Любимый язык программирования</th>
+            <th>Город</th>
+
+        </tr>
+        <tr>
+            <td>Абдулин Ринат Рушанович</td>
+            <td>ИСП-233</td>
+            <td>C#</td>
+            <td>Волжский</td>
+        </tr>
+    </table>
 </body>
 </html>
