--- a/index.html
+++ b/index.html
@@ -94,5 +94,49 @@
             <td>Волжский</td>
         </tr>
     </table>
+
+    <br>
+    <form>
+        <input type="text" placeholder="Введите имя">
+        <input type="email" placeholder="Введите email">
+        <input type="password" placeholder="Введите пароль">
+        <input type="number" placeholder="Возраст">
+        <input type="date">
+        <input type="checkbox">
+        <input type="radio" name="gender">
+        <input type="radio" name="gender">
+        <br>
+        <textarea placeholder="Введите сообщение" rows="4"></textarea>
+        <br>
+        <select>
+            <option>ИСП-231</option>
+            <option>ИСП-232</option>
+            <option>ИСП-233</option>
+        </select>
+        <button type="submit">Отправить</button>
+        <button type="reset">Очистить</button>
+        <label for="username">Ваша имя:</label>
+        <input id="username" type="text">
+    </form>
+    <br>
+    <form>
+        <label for="username">Имя:</label>
+        <input id="username" type="text" placeholder="Введите имя">
+        <br><br>
+        <label for="email">Email:</label>
+        <input id="email" type="email" placeholder="brolike636@gmail.com">
+        <br><br>
+        <label for="city">Город:</label>
+        <select id="city">
+            <option>Волгоград</option>
+            <option>Волжский</option>
+            <option>Камышин</option>
+        </select>
+        <br><br>
+        <label for="message">Сообщение:</label>
+        <textarea id="message" rows="4" placeholder="Напишите текст..."></textarea>
+        <br><br>
+        <button type="submit">Отправить</button>
+    </form>
 </body>
 </html>
